--- a/package.json
+++ b/package.json
@@ -38,16 +38,20 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.3.1",
+    "@types/mustache": "^4.2.5",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.11",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
     "json-stringify-safe": "^5.0.1",
+    "mustache": "^4.2.0",
     "nestjs-s3": "^2.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "postmark": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uniqid": "^5.4.0",
@@ -80,7 +84,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.5.3"
   },
   "jest": {
     "moduleFileExtensions": [
