--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-api",
+  "name": "nouvelan",
   "version": "1.0.0",
   "description": "",
   "author": "",
@@ -26,7 +26,6 @@
   "dependencies": {
     "@apollo/server": "^4.9.3",
     "@aws-sdk/client-s3": "^3.441.1",
-    "@loskir/styled-qr-code-node": "^1.5.1",
     "@nestjs/apollo": "^12.0.9",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
@@ -44,7 +43,6 @@
     "dayjs": "^1.11.11",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
-    "graphql-upload": "^13.0.0",
     "json-stringify-safe": "^5.0.1",
     "mustache": "^4.2.0",
     "nestjs-s3": "^2.0.1",
@@ -63,7 +61,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/graphql-upload": "^8.0.12",
     "@types/jest": "^29.5.2",
     "@types/json-stringify-safe": "^5.0.1",
     "@types/node": "^20.3.1",
